cmake_minimum_required(VERSION 3.7)
project(wwhd_rando_server CXX)

if(DEFINED DEVKITPRO)
  include("${DEVKITPRO}/wut/share/wut.cmake" REQUIRED)
  add_definitions(-DDEVKITPRO)
else()
  find_package(Threads REQUIRED)
endif()

include(FindPkgConfig)
pkg_check_modules(ZLIB zlib REQUIRED)

if(CMAKE_USE_PTHREADS_INIT)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror -std=c++11")
  set(THREADS_PREFER_PTHREAD_FLAG ON)
endif()


add_executable(wwhd_rando_server main.cpp ProtocolServer.cpp)
add_subdirectory("utility")
add_subdirectory("command")
add_subdirectory("filetypes")
target_link_libraries(wwhd_rando_server ${ZLIB_LDFLAGS})
target_compile_options(wwhd_rando_server PRIVATE ${ZLIB_CFLAGS})
if(DEFINED DEVKITPRO)
  target_link_libraries(wwhd_rando_server iosuhax)
endif()
set_property(TARGET wwhd_rando_server PROPERTY CXX_STANDARD 11)
if(CMAKE_USE_PTHREADS_INIT)
  target_link_libraries(wwhd_rando_server Threads::Threads)
endif()

if(DEFINED DEVKITPRO)
  wut_create_rpx(wwhd_rando_server)
endif()