cmake_minimum_required(VERSION 3.7)
project(wwhd_rando_tests CXX)

add_executable(yaz0test yaz0test.cpp "../filetypes/yaz0.cpp" "../utility/byteswap.cpp")
add_executable(sarctest sarctest.cpp "../filetypes/sarc.cpp" "../utility/byteswap.cpp")
add_executable(rpxtest rpxtest.cpp "../filetypes/wiiurpx.cpp" "../utility/byteswap.cpp")
if(WIN32)
  # set_target_properties(zlib PROPERTIES IMPORTED_LOCATION ${ZLIB_LIBRARY})
  set(ZLIB_INCLUDE_DIR "../libs_win/zlib")
  target_include_directories(rpxtest PRIVATE ${ZLIB_INCLUDE_DIR})
  target_link_libraries(rpxtest zlib)
else()
  target_link_libraries(rpxtest ${ZLIB_LDFLAGS})
  target_compile_options(rpxtest PRIVATE ${ZLIB_CFLAGS})
endif()